# simple-map-reduce

./: .gitignore  README.md
sdfs/: Cargo.toml  Traffic_Signal_Intersections_filter  build.rs
sdfs/executors/: Hdemo1map.py  Hdemo1reduce.py  Sdemo1map.py  Sdemo1reduce.py  selectmap.py  selectreduce.py  wordcountmap.py  wordcountreduce.py
sdfs/src/: client.rs  helpers.rs  leader.rs  list.proto  main.rs  message_types.rs  messages.proto  node.rs  receiver.rs  sender.rs  server.rs
