[package]
name = "sdfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["sync", "net", "io-util", "rt-multi-thread", "macros", "signal", "time", "fs"] }
futures = "0.3.29"
bytes = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.12.0"
prost-types = "0.12.0"
prost-build = "0.12.0"
chrono = "0.4.30"
hostname = "0.3.1"
anyhow = "1.0.75"
local-ip-address = "0.5.5"
rand = "0.8.5"
indicatif = "0.17.7"
dashmap = "5.5.3"
inquire = "0.6.2"
file-lock = "2.1.10"
fd-lock = "4.0.0"

[build-dependencies]
prost-build = "0.12.0"
